--- a/src/main/resources/fxml/DatabaseScreen.fxml
+++ b/src/main/resources/fxml/DatabaseScreen.fxml
@@ -3,8 +3,8 @@
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.layout.Pane?>
 
-<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.162" xmlns:fx="http://javafx.com/fxml/1" fx:controller="pl.ASVidBuild.PanelController.DatabaseScreenController">
+<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="800.0" minWidth="1200.0" prefHeight="800.0" prefWidth="1200.0" xmlns="http://javafx.com/javafx/8.0.162" xmlns:fx="http://javafx.com/fxml/1" fx:controller="pl.ASVidBuild.PanelController.DatabaseScreenController">
    <children>
-      <Button fx:id="menuButton" layoutX="274.0" layoutY="344.0" mnemonicParsing="false" onAction="#menuButtonClick" text="Menu" />
+      <Button fx:id="menuButton" layoutX="577.0" layoutY="729.0" mnemonicParsing="false" onAction="#menuButtonClick" text="Menu" />
    </children>
 </Pane>
