--- a/src/main/resources/fxml/ExplorerScreen.fxml
+++ b/src/main/resources/fxml/ExplorerScreen.fxml
@@ -5,15 +5,16 @@
 <?import javafx.scene.control.ContextMenu?>
 <?import javafx.scene.control.ListView?>
 <?import javafx.scene.control.MenuItem?>
+<?import javafx.scene.control.Slider?>
 <?import javafx.scene.layout.BorderPane?>
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.Pane?>
+<?import javafx.scene.layout.VBox?>
 <?import javafx.scene.media.MediaView?>
 
 <Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="800.0" minWidth="1200.0" prefHeight="800.0" prefWidth="1200.0" xmlns="http://javafx.com/javafx/8.0.162" xmlns:fx="http://javafx.com/fxml/1" fx:controller="pl.ASVidBuild.PanelController.ExplorerScreenController">
    <children>
       <Button fx:id="menuButton" layoutX="577.0" layoutY="761.0" mnemonicParsing="false" onAction="#menuButtonClick" text="Menu" />
-      <MediaView fx:id="mainMediaView" fitHeight="480.0" fitWidth="640.0" layoutX="33.0" layoutY="144.0" />
       <BorderPane layoutX="686.0" layoutY="84.0" prefHeight="653.0" prefWidth="490.0">
          <center>
             <ListView fx:id="vidPlayList" onMouseClicked="#vidPlayListClick" prefHeight="653.0" prefWidth="490.0" BorderPane.alignment="CENTER">
@@ -43,6 +44,63 @@
                   </Button>
                </children>
             </HBox>
+         </bottom>
+      </BorderPane>
+      <BorderPane prefHeight="714.0" prefWidth="681.0">
+         <center>
+            <MediaView fx:id="mainMediaView" fitHeight="480.0" fitWidth="640.0" BorderPane.alignment="CENTER" />
+         </center>
+         <bottom>
+            <VBox prefHeight="200.0" prefWidth="100.0" BorderPane.alignment="CENTER">
+               <children>
+                  <Slider fx:id="mainMediaViewPlayProgress" blockIncrement="1.0" onKeyReleased="#mainMediaViewPlayProgressKeyClick" onMouseClicked="#mainMediaViewPlayProgressClick">
+                     <padding>
+                        <Insets left="5.0" />
+                     </padding>
+                     <VBox.margin>
+                        <Insets bottom="5.0" />
+                     </VBox.margin>
+                  </Slider>
+                  <HBox fx:id="mainMediaViewPanel" disable="true" prefHeight="31.0" prefWidth="681.0">
+                     <children>
+                        <Button fx:id="mainMediaViewPlay" mnemonicParsing="false" onAction="#mainMediaViewPlayClick" prefWidth="60.0" text="Pause">
+                           <HBox.margin>
+                              <Insets right="5.0" />
+                           </HBox.margin>
+                        </Button>
+                        <Button fx:id="mainMediaViewStop" mnemonicParsing="false" onAction="#mainMediaViewStopClick" prefWidth="60.0" text="Stop">
+                           <HBox.margin>
+                              <Insets right="5.0" />
+                           </HBox.margin>
+                        </Button>
+                        <Button fx:id="mainMediaViewPrev" mnemonicParsing="false" onAction="#mainMediaViewPrevClick" prefWidth="60.0" text="Prev">
+                           <HBox.margin>
+                              <Insets right="5.0" />
+                           </HBox.margin>
+                        </Button>
+                        <Button fx:id="mainMediaViewNext" mnemonicParsing="false" onAction="#mainMediaViewNextClick" prefWidth="60.0" text="Next">
+                           <HBox.margin>
+                              <Insets right="5.0" />
+                           </HBox.margin>
+                        </Button>
+                        <Slider fx:id="mainMediaViewVolume" blockIncrement="5.0" onKeyReleased="#mainMediaViewVolumeKeyClick" onMouseClicked="#mainMediaViewVolumeClick">
+                           <HBox.margin>
+                              <Insets left="30.0" right="5.0" top="5.0" />
+                           </HBox.margin>
+                        </Slider>
+                        <Button fx:id="mainMediaViewMute" mnemonicParsing="false" onAction="#mainMediaViewMuteClick" prefHeight="25.0" prefWidth="68.0" text="Mute" />
+                        <Button fx:id="mainMediaViewFullScreen" mnemonicParsing="false" onAction="#mainMediaViewFullScreenClick" text="FullScreen">
+                           <HBox.margin>
+                              <Insets left="40.0" />
+                           </HBox.margin>
+                        </Button>
+                     </children>
+                     <padding>
+                        <Insets left="5.0" />
+                     </padding>
+                  </HBox>
+               </children>
+            </VBox>
          </bottom>
       </BorderPane>
    </children>
