--- a/src/main/resources/fxml/ExplorerScreen.fxml
+++ b/src/main/resources/fxml/ExplorerScreen.fxml
@@ -5,7 +5,10 @@
 <?import javafx.scene.control.ContextMenu?>
 <?import javafx.scene.control.ListView?>
 <?import javafx.scene.control.MenuItem?>
+<?import javafx.scene.control.ScrollPane?>
 <?import javafx.scene.control.Slider?>
+<?import javafx.scene.control.TitledPane?>
+<?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.BorderPane?>
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.Pane?>
@@ -15,7 +18,7 @@
 <Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="800.0" minWidth="1200.0" prefHeight="800.0" prefWidth="1200.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="pl.ASVidBuild.PanelController.ExplorerScreenController">
    <children>
       <Button fx:id="menuButton" layoutX="577.0" layoutY="761.0" mnemonicParsing="false" onAction="#menuButtonClick" text="Menu" />
-      <BorderPane layoutX="686.0" layoutY="84.0" prefHeight="653.0" prefWidth="490.0">
+      <BorderPane layoutX="686.0" layoutY="86.0" prefHeight="651.0" prefWidth="490.0">
          <center>
             <ListView fx:id="vidPlayList" onDragDropped="#vidPlayListOnDragDropped" onDragOver="#vidPlayListOnDragOver" onMouseClicked="#vidPlayListClick" prefHeight="653.0" prefWidth="490.0" BorderPane.alignment="CENTER">
                <contextMenu>
@@ -104,7 +107,7 @@
                         <Insets left="5.0" />
                      </padding>
                   </HBox>
-                  <Button fx:id="TagsWindowButton" mnemonicParsing="false" onAction="#TagWindowButtonClick" text="Tags">
+                  <Button fx:id="TagsWindowButton" mnemonicParsing="false" onAction="#TagWindowButtonClick" text="Tags Picker">
                      <VBox.margin>
                         <Insets left="5.0" />
                      </VBox.margin></Button>
@@ -112,5 +115,22 @@
             </VBox>
          </bottom>
       </BorderPane>
+      <TitledPane fx:id="filterTagsFrame" alignment="CENTER" animated="false" expanded="false" layoutX="687.0" layoutY="42.0" prefHeight="25.0" prefWidth="488.0" text="Filter Tags">
+        <content>
+          <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="108.0" prefWidth="486.0">
+               <children>
+                  <ScrollPane hbarPolicy="ALWAYS" prefHeight="97.0" prefWidth="488.0" vbarPolicy="NEVER">
+                     <content>
+                        <Pane fx:id="filterTagsVidPlayList" onDragDropped="#filterTagsVidPlayListDragDropped" onDragOver="#filterTagsVidPlayListDragOver" prefHeight="106.0" prefWidth="486.0">
+                           <children>
+                              <Button layoutX="3.0" layoutY="3.0" mnemonicParsing="false" prefHeight="75.0" prefWidth="100.0" text="No Tags Added" />
+                           </children>
+                        </Pane>
+                     </content>
+                  </ScrollPane>
+               </children>
+            </AnchorPane>
+        </content>
+      </TitledPane>
    </children>
 </Pane>
