--- a/src/main/resources/fxml/TagScreen.fxml
+++ b/src/main/resources/fxml/TagScreen.fxml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.ScrollPane?>
 <?import javafx.scene.control.SplitPane?>
@@ -16,7 +17,10 @@
       <ScrollPane fx:id="categoryTagsPane" prefHeight="200.0" prefWidth="200.0" vbarPolicy="NEVER" />
       <ScrollPane hbarPolicy="NEVER" prefHeight="200.0" prefWidth="200.0" vbarPolicy="ALWAYS">
          <content>
-            <Pane fx:id="tagsPane" prefHeight="574.0" prefWidth="686.0" />
+            <Pane fx:id="tagsPane" prefHeight="574.0" prefWidth="686.0">
+               <children>
+                  <Button fx:id="addNewTagButton" layoutX="5.0" layoutY="5.0" mnemonicParsing="false" onAction="#addNewTagButtonClick" prefHeight="150.0" prefWidth="200.0" text="Add new tag...." />
+               </children></Pane>
          </content></ScrollPane>
    </items>
 </SplitPane>
