--- a/src/main/resources/fxml/OptionsScreen.fxml
+++ b/src/main/resources/fxml/OptionsScreen.fxml
@@ -1,10 +1,23 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.CheckBox?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.Separator?>
+<?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.Pane?>
 
-<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.162" xmlns:fx="http://javafx.com/fxml/1" fx:controller="pl.ASVidBuild.PanelController.OptionsScreenController">
+<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="pl.ASVidBuild.PanelController.OptionsScreenController">
    <children>
       <Button fx:id="menuButton" layoutX="274.0" layoutY="344.0" mnemonicParsing="false" onAction="#menuButtonClick" text="Menu" />
+      <TextField fx:id="windowsMediaPlayerExecPathTextField" layoutX="45.0" layoutY="76.0" prefHeight="25.0" prefWidth="386.0" text="C:/Program Files (x86)/Windows Media Player/wmplayer" />
+      <Label layoutX="45.0" layoutY="59.0" text="Windows Media Player Executable" />
+      <TextField fx:id="mpcExecPathTextField" layoutX="45.0" layoutY="129.0" prefHeight="25.0" prefWidth="386.0" text="C:/Program Files (x86)/K-Lite Codec Pack/MPC-HC64/mpc-hc64" />
+      <Label layoutX="45.0" layoutY="112.0" text="Media Player Classic Executable" />
+      <Button fx:id="windowsMediaPlayerExecPathBrowse" layoutX="431.0" layoutY="76.0" mnemonicParsing="false" onAction="#windowsMediaPlayerExecPathBrowseClick" text="Browse..." />
+      <Button fx:id="mpcExecPathBrowse" layoutX="431.0" layoutY="129.0" mnemonicParsing="false" onAction="#mpcExecPathBrowseClick" text="Browse..." />
+      <CheckBox fx:id="autoPlayNextVidCheckBox" disable="true" layoutX="45.0" layoutY="200.0" mnemonicParsing="false" onAction="#autoPlayNextVidCheckBoxClick" text="Auto-Play next Video In Explorer Playlist when video ends" />
+      <Separator layoutY="178.0" prefHeight="3.0" prefWidth="600.0" />
+      <CheckBox fx:id="overviewModeCheckBox" disable="true" layoutX="45.0" layoutY="231.0" mnemonicParsing="false" onAction="#overviewModeCheckBoxClick" text="Overview Mode (Play only fragments of Video)" />
    </children>
 </Pane>
