--- a/src/main/resources/fxml/OptionsScreen.fxml
+++ b/src/main/resources/fxml/OptionsScreen.fxml
@@ -10,9 +10,9 @@
 <Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="pl.ASVidBuild.PanelController.OptionsScreenController">
    <children>
       <Button fx:id="menuButton" layoutX="274.0" layoutY="344.0" mnemonicParsing="false" onAction="#menuButtonClick" text="Menu" />
-      <TextField fx:id="windowsMediaPlayerExecPathTextField" layoutX="45.0" layoutY="76.0" prefHeight="25.0" prefWidth="386.0" text="C:/Program Files (x86)/Windows Media Player/wmplayer" />
+      <TextField fx:id="windowsMediaPlayerExecPathTextField" editable="false" layoutX="45.0" layoutY="76.0" prefHeight="25.0" prefWidth="386.0" text="C:/Program Files (x86)/Windows Media Player/wmplayer" />
       <Label layoutX="45.0" layoutY="59.0" text="Windows Media Player Executable" />
-      <TextField fx:id="mpcExecPathTextField" layoutX="45.0" layoutY="129.0" prefHeight="25.0" prefWidth="386.0" text="C:/Program Files (x86)/K-Lite Codec Pack/MPC-HC64/mpc-hc64" />
+      <TextField fx:id="mpcExecPathTextField" editable="false" layoutX="45.0" layoutY="129.0" prefHeight="25.0" prefWidth="386.0" text="C:/Program Files (x86)/K-Lite Codec Pack/MPC-HC64/mpc-hc64" />
       <Label layoutX="45.0" layoutY="112.0" text="Media Player Classic Executable" />
       <Button fx:id="windowsMediaPlayerExecPathBrowse" layoutX="431.0" layoutY="76.0" mnemonicParsing="false" onAction="#windowsMediaPlayerExecPathBrowseClick" text="Browse..." />
       <Button fx:id="mpcExecPathBrowse" layoutX="431.0" layoutY="129.0" mnemonicParsing="false" onAction="#mpcExecPathBrowseClick" text="Browse..." />
