--- a/src/main/resources/fxml/ExplorerScreen.fxml
+++ b/src/main/resources/fxml/ExplorerScreen.fxml
@@ -3,6 +3,7 @@
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.ContextMenu?>
+<?import javafx.scene.control.Label?>
 <?import javafx.scene.control.ListView?>
 <?import javafx.scene.control.MenuItem?>
 <?import javafx.scene.control.ScrollPane?>
@@ -59,7 +60,7 @@
             <MediaView fx:id="mainMediaView" fitHeight="480.0" fitWidth="640.0" BorderPane.alignment="CENTER" />
          </center>
          <bottom>
-            <VBox prefHeight="200.0" prefWidth="100.0" BorderPane.alignment="CENTER">
+            <VBox prefHeight="200.0" prefWidth="681.0" BorderPane.alignment="CENTER">
                <children>
                   <Slider fx:id="mainMediaViewPlayProgress" blockIncrement="1.0" onKeyReleased="#mainMediaViewPlayProgressKeyClick" onMouseClicked="#mainMediaViewPlayProgressClick">
                      <padding>
@@ -107,10 +108,28 @@
                         <Insets left="5.0" />
                      </padding>
                   </HBox>
+                  <Label text="Tags of selected file:">
+                     <VBox.margin>
+                        <Insets left="2.0" top="5.0" />
+                     </VBox.margin>
+                  </Label>
+                  <ScrollPane hbarPolicy="ALWAYS" prefHeight="190.0" prefWidth="679.0" vbarPolicy="NEVER">
+                     <content>
+                        <Pane fx:id="fileTagsListPanel" onDragDropped="#fileTagsListPanelDragDropped" onDragOver="#fileTagsListPanelDragOver" prefHeight="84.0" prefWidth="676.0">
+                           <children>
+                              <Button fx:id="fileTagsListPanelAnyFileButton" layoutX="3.0" layoutY="3.0" mnemonicParsing="false" prefHeight="75.0" prefWidth="100.0" text="[ Any File ]" textFill="#4b8f32" />
+                           </children>
+                        </Pane>
+                     </content>
+                     <VBox.margin>
+                        <Insets left="2.0" />
+                     </VBox.margin>
+                  </ScrollPane>
                   <Button fx:id="TagsWindowButton" mnemonicParsing="false" onAction="#TagWindowButtonClick" text="Tags Picker">
                      <VBox.margin>
-                        <Insets left="5.0" />
-                     </VBox.margin></Button>
+                        <Insets left="4.0" top="14.0" />
+                     </VBox.margin>
+                  </Button>
                </children>
             </VBox>
          </bottom>
@@ -121,7 +140,7 @@
                <children>
                   <ScrollPane hbarPolicy="ALWAYS" prefHeight="97.0" prefWidth="488.0" vbarPolicy="NEVER">
                      <content>
-                        <Pane fx:id="filterTagsVidPlayList" onDragDropped="#filterTagsVidPlayListDragDropped" onDragOver="#filterTagsVidPlayListDragOver" prefHeight="106.0" prefWidth="486.0">
+                        <Pane fx:id="filterTagsVidPlayList" onDragDropped="#filterTagsVidPlayListDragDropped" onDragOver="#filterTagsVidPlayListDragOver" prefHeight="106.0" prefWidth="480.0">
                            <children>
                               <Button layoutX="3.0" layoutY="3.0" mnemonicParsing="false" prefHeight="75.0" prefWidth="100.0" text="No Tags Added" />
                            </children>
