--- a/src/main/resources/fxml/ExplorerScreen.fxml
+++ b/src/main/resources/fxml/ExplorerScreen.fxml
@@ -115,14 +115,7 @@
                         <Insets left="2.0" top="5.0" />
                      </VBox.margin>
                   </Label>
-                  <ScrollPane hbarPolicy="ALWAYS" prefHeight="190.0" prefWidth="679.0" vbarPolicy="NEVER">
-                     <content>
-                        <Pane fx:id="fileTagsListPanel" onDragDropped="#fileTagsListPanelDragDropped" onDragOver="#fileTagsListPanelDragOver" prefHeight="84.0" prefWidth="676.0">
-                           <children>
-                              <Button fx:id="fileTagsListPanelAnyFileButton" layoutX="3.0" layoutY="3.0" mnemonicParsing="false" prefHeight="75.0" prefWidth="100.0" text="[ Any File ]" textFill="#4b8f32" />
-                           </children>
-                        </Pane>
-                     </content>
+                  <ScrollPane fx:id="fileTagsListScrollPanel" hbarPolicy="ALWAYS" prefHeight="190.0" prefWidth="679.0" vbarPolicy="NEVER">
                      <VBox.margin>
                         <Insets left="2.0" />
                      </VBox.margin>
@@ -140,15 +133,7 @@
         <content>
           <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="108.0" prefWidth="486.0">
                <children>
-                  <ScrollPane hbarPolicy="ALWAYS" prefHeight="97.0" prefWidth="488.0" vbarPolicy="NEVER">
-                     <content>
-                        <Pane fx:id="filterTagsVidPlayList" onDragDropped="#filterTagsVidPlayListDragDropped" onDragOver="#filterTagsVidPlayListDragOver" prefHeight="106.0" prefWidth="480.0">
-                           <children>
-                              <Button layoutX="3.0" layoutY="3.0" mnemonicParsing="false" prefHeight="75.0" prefWidth="100.0" text="No Tags Added" />
-                           </children>
-                        </Pane>
-                     </content>
-                  </ScrollPane>
+                  <ScrollPane fx:id="filterTagsScrollPanel" hbarPolicy="ALWAYS" prefHeight="97.0" prefWidth="488.0" vbarPolicy="NEVER" />
                </children>
             </AnchorPane>
         </content>
