--- a/src/main/resources/fxml/DatabaseScreen.fxml
+++ b/src/main/resources/fxml/DatabaseScreen.fxml
@@ -1,10 +1,27 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Tab?>
+<?import javafx.scene.control.TabPane?>
+<?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.Pane?>
 
 <Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="800.0" minWidth="1200.0" prefHeight="800.0" prefWidth="1200.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="pl.ASVidBuild.PanelController.DatabaseScreenController">
    <children>
       <Button fx:id="menuButton" layoutX="577.0" layoutY="729.0" mnemonicParsing="false" onAction="#menuButtonClick" text="Menu" />
+      <TabPane layoutX="-2.0" prefHeight="722.0" prefWidth="1207.0" tabClosingPolicy="UNAVAILABLE">
+        <tabs>
+          <Tab text="Backup">
+            <content>
+              <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
+                     <children>
+                        <Button fx:id="DumpDB2FileButton" layoutX="14.0" layoutY="14.0" mnemonicParsing="false" onAction="#DumpDB2FileButtonClick" prefHeight="25.0" prefWidth="175.0" text="Dump Database to File..." AnchorPane.leftAnchor="14.0" />
+                        <Button fx:id="RestoreDBfromFileButton" layoutX="14.0" layoutY="49.0" mnemonicParsing="false" onAction="#RestoreDBfromFileButtonClick" prefHeight="25.0" prefWidth="175.0" text="Restore Database from File..." AnchorPane.leftAnchor="14.0" />
+                     </children>
+                  </AnchorPane>
+            </content>
+          </Tab>
+        </tabs>
+      </TabPane>
    </children>
 </Pane>
