Some Bugfixes  - Fixed the FileTags loading on changing playing item via prev/next button.  - Fixed the problem with responsiveness of mediaplayer progress bar.  - Fixed an issue with some file path characters unabling to execute sql code.

--- a/src/main/resources/fxml/ExplorerScreen.fxml
+++ b/src/main/resources/fxml/ExplorerScreen.fxml
@@ -64,7 +64,7 @@
          <bottom>
             <VBox prefHeight="200.0" prefWidth="681.0" BorderPane.alignment="CENTER">
                <children>
-                  <Slider fx:id="mainMediaViewPlayProgress" blockIncrement="1.0" onKeyReleased="#mainMediaViewPlayProgressKeyClick" onMouseClicked="#mainMediaViewPlayProgressClick">
+                  <Slider fx:id="mainMediaViewPlayProgress" blockIncrement="1.0" minorTickCount="1" onKeyReleased="#mainMediaViewPlayProgressKeyClick" onMouseClicked="#mainMediaViewPlayProgressClick">
                      <padding>
                         <Insets left="5.0" />
                      </padding>
